--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14339,12 +14339,12 @@ textarea.form-control-lg {
 .profile-img .file {
   position: relative;
   overflow: hidden;
-  margin-top: -20%;
+  margin-top: -30%;
   width: 70%;
   border: none;
   border-radius: 0;
   font-size: 15px;
-  background: rgba(33, 37, 41, 0.7215686275);
+  opacity: 0.7;
 }
 
 .profile-img .file input {
@@ -14352,6 +14352,17 @@ textarea.form-control-lg {
   opacity: 0;
   right: 0;
   top: 0;
+}
+
+.profile-img .remove {
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  width: 70%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  opacity: 0.5;
 }
 
 .profile-head h5, .profile-head .h5 {
