--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,12 +49,12 @@
 .profile-img .file {
     position: relative;
     overflow: hidden;
-    margin-top: -20%;
+    margin-top: -30%;
     width: 70%;
     border: none;
     border-radius: 0;
     font-size: 15px;
-    background: #212529b8;
+    opacity: 0.7;
 }
 .profile-img .file input {
     position: absolute;
@@ -62,6 +62,18 @@
     right: 0;
     top: 0;
 }
+
+.profile-img .remove {
+    position: relative;
+    overflow: hidden;
+    margin-top: -20%;
+    width: 70%;
+    border: none;
+    border-radius: 0;
+    font-size: 15px;
+    opacity: 0.5;
+}
+
 .profile-head h5{
     color: #333;
 }
