--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15381,6 +15381,10 @@ h3.class-announcements-title, .class-announcements-title.h3 {
   margin-bottom: 0.5em;
 }
 
+.border-dotted {
+  border-style: dotted;
+}
+
 .count-message {
   margin-top: -20px;
   margin-right: 5px;
@@ -15393,6 +15397,10 @@ h3.class-announcements-title, .class-announcements-title.h3 {
 
 .show-as-action {
   cursor: pointer;
+}
+
+.show-as-grab {
+  cursor: grab;
 }
 
 select[multiple] {
@@ -15806,4 +15814,9 @@ select[multiple] {
 
 .avatar-list-container:hover .avatar-list-item:nth-child(n+2) {
   margin-left: -20px;
+}
+
+.text-justify {
+  text-align: justify;
+  text-justify: inter-word;
 }
