--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -47,7 +47,7 @@ $body-color:    $gray-700 !default;
 
 // Fonts
 
-$headings-color:         $info !default;
+//$headings-color:         $info !default;
 
 // Dropdowns
 
